--- a/webapp/src/Components/TableElement.css
+++ b/webapp/src/Components/TableElement.css
@@ -3,6 +3,10 @@
   align-items: center;
 }
 
+.rt-tr-group:hover{
+  background: #0f4c75!important;
+}
+
 .countryInputBox {
   border: 1px solid rgba(0,0,0,0.1);
     background: #fff;
